web/deploy/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: color-web
  namespace: spagiari
  labels:
    app: color
    process: web
    product: spagiari
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: color
    process: web
    product: spagiari
  type: ClusterIP
